2022-03-07  Antoine Quint  <graouts@webkit.org>

        Transition on text-decoration-color from currentColor jumps
        https://bugs.webkit.org/show_bug.cgi?id=236992
        <rdar://problem/89382835>

        Reviewed by Antti Koivisto.

        * web-platform-tests/web-animations/responsive/to-color-change-expected.txt:

2022-03-07  Antoine Quint  <graouts@webkit.org>

        [web-animations] text-emphasis shorthand should be animatable
        https://bugs.webkit.org/show_bug.cgi?id=237529

        Reviewed by Antti Koivisto.

        * web-platform-tests/css/css-pseudo/parsing/marker-supported-properties-expected.txt:
        * web-platform-tests/css/css-pseudo/parsing/marker-supported-properties-in-animation-expected.txt:

2022-03-07  Antoine Quint  <graouts@webkit.org>

        [web-animations] text-emphasis-style should support discrete animations
        https://bugs.webkit.org/show_bug.cgi?id=237514

        Reviewed by Antti Koivisto.

        * web-platform-tests/css/css-pseudo/parsing/marker-supported-properties-expected.txt:
        * web-platform-tests/css/css-pseudo/parsing/marker-supported-properties-in-animation-expected.txt:
        * web-platform-tests/css/css-text-decor/inheritance-expected.txt:
        * web-platform-tests/web-animations/animation-model/animation-types/accumulation-per-property-002-expected.txt:
        * web-platform-tests/web-animations/animation-model/animation-types/addition-per-property-002-expected.txt:
        * web-platform-tests/web-animations/animation-model/animation-types/interpolation-per-property-002-expected.txt:

2022-03-07  Antoine Quint  <graouts@webkit.org>

        [web-animations] text-emphasis-color should support non-discrete animations
        https://bugs.webkit.org/show_bug.cgi?id=237518

        Reviewed by Antti Koivisto.

        * web-platform-tests/css/css-pseudo/parsing/marker-supported-properties-in-animation-expected.txt: