@@ -1,11 +1,11 @@
 
 PASS Background color responsive to currentColor changes
-FAIL Fill color responsive to currentColor changes assert_equals: expected "rgb(0, 34, 102)" but got "rgb(0, 0, 0)"
+PASS Fill color responsive to currentColor changes
 PASS Color interpolation uses pre-multiplied colors
 PASS Border color responsive to currentColor changes
 PASS Border color responsive to currentColor changes again
 PASS Outline color responsive to currentColor changes
-FAIL Stroke color responsive to currentColor changes assert_equals: expected "rgb(0, 34, 102)" but got "none"
+PASS Stroke color responsive to currentColor changes
 PASS Text decoration color responsive to currentColor changes
 FAIL Color responsive to parent currentColor changes assert_equals: expected "rgb(34, 51, 34)" but got "rgb(0, 51, 51)"
 FAIL Color responsive to repeated parent currentColor changes assert_equals: expected "rgb(102, 17, 51)" but got "rgb(0, 17, 153)"
